Fix test reflection issues